=========================================================================
Date                Version     Description
=========================================================================

2021-08-12: v2.4.5 : Fix Swagger API issue.
                     Add PayPal payment type.
                     Fix DATA_CHK issue on Payment Types.

2021-07-30: v2.4.4 : Consolidate Cron class into single file for Magento 2.4.x.
                     Block double order processing on multiple requests.
                     Add API support for PayGate payment gateway.
                     Improve multisite scope handling for Fetch and Cron.
                     Add support for Store Credit if available (getTotalDue).

2021-07-05: v2.4.3 : Increase cron schedule to query every 10 minutes.

2021-06-15: v2.4.2 : Fix cron query method not firing as expected on some configurations.
                     Fix 'Fetch' query method not updating order status from backend.
                     Remove redirect button.
                     Code refactor and format.
                     Improve IPN reliability.

2021-05-14: v2.4.1 : Fix PayVault Card Delete.
                     Transaction ID added for Pending orders after initiate.
                     Cron schedule amended.
                     Payment Types radio block fix for some themes.
                     Remove object manager.
                     Fix undefined index error $orderData['additional_information'].
                     Order status to pending if checksum fails to pick up by cron.
                     Don't update order status by IPN if already complete or processing.

2021-04-06: v2.4.0 : Major rewrite to add support for Magento 2.4.x
                     Improve handling of spaces in PayGate ID.
                     Remove legacy iFrame code.
                     Add PayWeb Query function.
                     Add PayVault feature.
                     Add Payment Types feature.