@@ -10,7 +10,7 @@
 -->
 <config xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:noNamespaceSchemaLocation="urn:magento:framework:Module/etc/module.xsd">
-    <module name="PayGate_PayWeb" setup_version="2.4.5">
+    <module name="PayGate_PayWeb" setup_version="2.4.6">
         <sequence>
             <module name="Magento_Checkout"/>
             <module name="Magento_Sales"/>
