@@ -36,4 +36,41 @@
     font-family: inherit
 }
 
+div.payment-types {
+    margin-bottom: 20px !important;
+}
+
+div.payment-types > label {
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 10px !important;
+}
+
+ul.types {
+    margin-top: 10px !important;
+    padding-left: 0;
+    display: inline-block !important;
+}
+
+ul.types li {
+    margin-bottom: 5px !important;
+    list-style: none;
+}
+
+span.payment-type-label {
+    width: 100px;
+    text-align: left;
+    display: inline-block;
+}
+
+span.payment-type-label-img {
+    width: 100px;
+    text-align: right;
+    display: inline-block;
+}
+
+img.payment-type-label-img {
+    height: 20px;
+    margin-left: auto !important;
+}
 /* payment types style end */
