@@ -2,6 +2,11 @@
 Date                Version     Description
 =========================================================================
 
+2021-09-15: v2.4.6 : Disable PayGate on unsupported multiship.
+                     Fix undefined offset on cron query method.
+                     Improve Payment Type styling on one step checkout.
+                     Add additional logging on fetch method.
+
 2021-08-12: v2.4.5 : Fix Swagger API issue.
                      Add PayPal payment type.
                      Fix DATA_CHK issue on Payment Types.
